--- a/index.html
+++ b/index.html
@@ -322,6 +322,11 @@
                 image: "https://i.imgur.com/AdJqwO6.png", // PNG URL example
                 tags: ["focus"]
             },
+			{
+                name: "GFX_focus_DPK_so_it_begins",
+                image: "https://imgur.com/Ja3X9Z6.png", // PNG URL example
+                tags: ["focus"]
+            },
 			// Ideas icons data
         ];
 
