--- a/index.html
+++ b/index.html
@@ -34,6 +34,24 @@
             max-width: 1400px;
             margin: 0 auto;
         }
+		
+		#themeToggle {
+			padding: 0.5rem;
+			border: 1px solid var(--border); /* Added border */
+			border-radius: 8px; /* Matches other elements */
+			background: var(--card-bg);
+			cursor: pointer;
+			font-size: 1.25rem;
+			transition: all 0.2s ease;
+			color: var(--foreground);
+			box-shadow: 0 1px 1px rgba(0, 0, 0, 0.01); /* Subtle depth */
+		}
+
+		#themeToggle:hover {
+			transform: scale(1.05);
+			border-color: var(--primary); /* Highlight on hover */
+			box-shadow: 0 2px 2px rgba(0, 0, 0, 0.02);
+		}
 
         .search-section {
             position: sticky;
@@ -97,7 +115,7 @@
 		/* Adjust grid to prevent cards from becoming too wide */
 		.icon-grid {
 			display: grid;
-			grid-template-columns: repeat(auto-fill, minmax(160px, 200px));
+			grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
 			gap: 1.5rem;
 			justify-content: center;
 		}
@@ -139,7 +157,7 @@
 			line-height: 1.3;
 			font-weight: 500;
 			color: var(--foreground);
-			margin-bottom: 0.5rem;
+			margin-bottom: 0.25rem;
 			white-space: nowrap;
 			overflow: hidden;
 			text-overflow: ellipsis;
